Add Shaded Collections Concurrent classes